Add ItemController and UserController