@@ -3,13 +3,17 @@ package ru.practicum.shareit.item;
 import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Repository;
+import ru.practicum.shareit.NotNullCondition;
 import ru.practicum.shareit.exception.NotFoundException;
 import ru.practicum.shareit.item.dto.ItemDto;
+import ru.practicum.shareit.item.dto.ItemUpdateRequest;
 import ru.practicum.shareit.item.model.Item;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Repository
 @AllArgsConstructor
@@ -19,7 +23,7 @@ public class ItemRepository implements ItemStorage {
     private long customIdCounter;
 
     private long nextId() {
-        return customIdCounter++;
+        return ++customIdCounter;
     }
 
     @Override
@@ -30,21 +34,31 @@ public class ItemRepository implements ItemStorage {
     }
 
     @Override
-    public ItemDto update(long ownerId, long itemId, Item item) {
+    public ItemDto update(long ownerId, long itemId, ItemUpdateRequest item) {
         if (items.get(itemId).getOwnerId() != ownerId) {
             throw new NotFoundException("Item with id " + itemId + " does not own owner with id " + ownerId);
         }
-        items.put(itemId, item);
+
+        Item itemToUpdate = items.get(itemId);
+        modelMapper.getConfiguration().setPropertyCondition(new NotNullCondition());
+        modelMapper.map(item, itemToUpdate);
+
+        items.put(itemId, itemToUpdate);
         return modelMapper.map(item, ItemDto.class);
     }
 
     @Override
-    public List<ItemDto> search(long ownerId, String text) {
-        return items.values().stream()
-                .filter(item -> item.getOwnerId() == ownerId)
-                .filter(item -> item.getName().contains(text))
+    public List<ItemDto> search(String text) {
+        if (items == null || text == null || text.isEmpty() || items.isEmpty()) {
+            return Collections.emptyList();
+        }
+        List<ItemDto> list = items.values().stream()
+                .filter(Item::getAvailable)
+                .filter(item -> item.getName().toUpperCase().contains(text.toUpperCase()))
                 .map(item -> modelMapper.map(item, ItemDto.class))
-                .toList();
+                .collect(Collectors.toList());
+
+        return list;
     }
 
     @Override
